Fixed session buttongroup not scaling properly on small screens (finally).

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,3 +1,8 @@
+.btn:focus {
+    outline: none !important;
+    border-color: transparent !important;
+}
+
 .btn-primary.raised {
 	box-shadow: 0 3px 0 0 #007299;
 }
