--- a/css/panel_session.css
+++ b/css/panel_session.css
@@ -6,6 +6,25 @@
     height: auto;
 }
 
+.panel-session-button-group{
+    width: 100%;
+}
+
+.panel-session-official-button {
+    position: absolute !important;
+    top: 0 !important;
+    right: 0 !important;
+    z-index: 100;
+}
+
+.panel-session-new-button {
+    color: white !important;
+    width: 100%;
+    padding-right: 17% !important;
+    text-align: center !important;
+    border-radius: 5px !important;
+}
+
 .panel-session-hr {
     margin-bottom: 12px;
     margin-top: 10px;
