--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,6 @@ ul {
     color: #939393;
 }
 
-.panel-session-new-button {
-    color: white !important;
-    padding-left: 60px !important;
-    padding-right: 60px !important;
-}
-
 .panel {
     box-shadow: 6px 7px 4px 0 #000000 !important;
     border-radius: 1px !important;
